# vtriga-pico

./: .gitignore  CMakeLists.txt  README.md  build-desktop.sh  build-pico.sh  description.txt  export-sdk.sh
src/: average_value.hpp  constants.hpp  control_rod.cpp  control_rod.hpp  intercore.hpp  lcd.cpp  lcd.hpp  main-desktop.cpp  main.cpp  packets.hpp  reactor.cpp  reactor.hpp  seven_segment.cpp  seven_segment.hpp
